# bountyhunter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  TODO.txt  conf.py  example.ipynb  make.bat
src/bountyhunter/: __init__.py  bot.py  config.json  config.py
src/bountyhunter/cogs/: hunter.py  template.py
src/bountyhunter/database/: models.py
src/bountyhunter/exceptions/: __init__.py
src/bountyhunter/helpers/: checks.py  db_manager.py
tests/: test_bountyhunter.py
