[tool.poetry]
name = "bountyhunter"
version = "0.1.1"
description = "A system for staying up to date on who's been caught cheating in CoD"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
aiosqlite = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
